--- a/Bluethrough/app/src/main/res/layout-v21/activity_main.xml
+++ b/Bluethrough/app/src/main/res/layout-v21/activity_main.xml
@@ -8,7 +8,6 @@
     tools:context=".MainActivity"
     android:orientation="vertical"
     android:gravity="center">
-
     <ImageView
         android:id="@+id/iv_bluetooth_on_off"
         android:layout_width="wrap_content"
@@ -45,10 +44,28 @@
         android:textColor="@android:color/black"
         android:background="@android:color/transparent">
     </Button>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
     <ListView
         android:id="@+id/lv_Discovered_Devices"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
+    </ScrollView>
+    <Button
+        android:id="@+id/btn_Emparejados"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/emparejados"
+        android:textSize="22sp"
+        android:textColor="@android:color/black"
+        android:background="@android:color/transparent">
+    </Button>
 
+    <ListView
+        android:id="@+id/lv_Paired_Devices"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    </ListView>
 </LinearLayout>
