--- a/Bluethrough/app/src/main/res/layout-v21/activity_main.xml
+++ b/Bluethrough/app/src/main/res/layout-v21/activity_main.xml
@@ -65,4 +65,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </ListView>
+    <TextView
+        android:id="@+id/tv_debug"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/debug"
+        android:gravity="center"
+        >
+
+    </TextView>
 </LinearLayout>
