--- a/BluethroughV2/app/src/main/res/layout/activity_main.xml
+++ b/BluethroughV2/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
         app:layout_constraintHorizontal_bias="0.12"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.959" />
+        app:layout_constraintVertical_bias="0.946" />
 
     <Button
         android:id="@+id/bt_Enviar"
@@ -54,7 +54,7 @@
         app:layout_constraintHorizontal_bias="0.384"
         app:layout_constraintStart_toEndOf="@+id/et_Chat"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.97" />
+        app:layout_constraintVertical_bias="0.957" />
 
     <Button
         android:id="@+id/bt_Conectados"
@@ -70,11 +70,11 @@
 
     <ListView
         android:id="@+id/lv_Chat"
-        android:layout_width="378dp"
-        android:layout_height="483dp"
-        android:layout_marginTop="164dp"
+        android:layout_width="382dp"
+        android:layout_height="395dp"
+        android:layout_marginTop="236dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.484"
+        app:layout_constraintHorizontal_bias="0.551"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"></ListView>
 
@@ -129,6 +129,28 @@
         android:text="Destinatario:"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.822"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="156dp"
+        android:text="Alias:"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.724"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_Alias"
+        android:layout_width="97dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="184dp"
+        android:text="----"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.901"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
